# google_scrapper

./: .env.dev  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  Dockerfile.prod  requirements.txt
app/google_scrapper/: admin.py  apps.py  models.py  scrapper.py  tests.py  urls.py  views.py
app/google_scrapper/migrations/: 0001_initial.py  0002_auto_20201204_1137.py  0003_auto_20201204_1140.py
app/google_scrapper/templates/: base.html  index.html  search_results.html
app/webapp/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
