[tool.poetry]
name = "google_scrapper"
version = "0.1.0"
description = "Small web app for google scrapping."
authors = ["Robert Strzybny <strzybny.robert@gmail.com>"]
license = "MIT Licence"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
